Fixed background shadow not showing correctly.

--- a/cover.css
+++ b/cover.css
@@ -63,14 +63,7 @@ body {
     color: #373737;
     text-align: center;
     text-shadow: 0 1px 3px rgba(0, 0, 0, .5);
-    /*-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);*/
-    background: -webkit-linear-gradient(rgba(220, 208, 192, 1) 0%, rgba(244, 240, 235, 0.01) 69%, rgba(252, 251, 250, 1) 92%, rgba(255, 255, 255, 1) 100%);
-    background: -moz-linear-gradient(rgba(220, 208, 192, 1) 0%, rgba(244, 240, 235, 0.01) 69%, rgba(252, 251, 250, 1) 92%, rgba(255, 255, 255, 1) 100%);
-    background: -o-linear-gradient(rgba(220, 208, 192, 1) 0%, rgba(244, 240, 235, 0.01) 69%, rgba(252, 251, 250, 1) 92%, rgba(255, 255, 255, 1) 100%);
-    background: linear-gradient(rgba(220, 208, 192, 1) 0%, rgba(244, 240, 235, 0.01) 69%, rgba(252, 251, 250, 1) 92%, rgba(255, 255, 255, 1) 100%);
-    background-attachment: fixed;
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dcd0c0', endColorstr='#f4f4f4', GradientType=0);
+    background-color: rgba(0, 0, 0, .0);
 }
 
 
@@ -82,6 +75,14 @@ body {
     height: 100%;
     /* For at least Firefox */
     min-height: 100%;
+    /*-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+          box-shadow: inset 0 0 100px rgba(0,0,0,.5);*/
+    background: -webkit-linear-gradient(rgba(220, 208, 192, 1) 0%, rgba(244, 240, 235, 0.01) 69%, rgba(252, 251, 250, 1) 92%, rgba(255, 255, 255, 1) 100%);
+    background: -moz-linear-gradient(rgba(220, 208, 192, 1) 0%, rgba(244, 240, 235, 0.01) 69%, rgba(252, 251, 250, 1) 92%, rgba(255, 255, 255, 1) 100%);
+    background: -o-linear-gradient(rgba(220, 208, 192, 1) 0%, rgba(244, 240, 235, 0.01) 69%, rgba(252, 251, 250, 1) 92%, rgba(255, 255, 255, 1) 100%);
+    background: linear-gradient(rgba(220, 208, 192, 1) 0%, rgba(244, 240, 235, 0.01) 69%, rgba(252, 251, 250, 1) 92%, rgba(255, 255, 255, 1) 100%);
+    background-attachment: fixed;
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dcd0c0', endColorstr='#f4f4f4', GradientType=0);
 }
 
 .site-wrapper-inner {
